initial comment in the telechargement page

--- a/src/app/client/telechargement/categories/adobe/adobe.component.html
+++ b/src/app/client/telechargement/categories/adobe/adobe.component.html
@@ -6,8 +6,8 @@
   <a href="#" data-menu="menu-highlights" class="header-icon header-icon-3"><i class="fas fa-brush"></i></a>
   </div>
   <div id="footer-bar" class="footer-bar-5">
-    <a href="a-propos"><i data-feather="phone" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Contact</span></a>
-    <a href="/telechargement" class="active-nav"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Telechargement</span></a>
+    <a href="/contact"><i data-feather="phone" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Contact</span></a>
+    <a href="/telechargement" class="active-nav"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Téléchargement</span></a>
     <a href="/" ><i data-feather="home" data-feather-line="1" data-feather-size="21" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-light"></i><span>Accueil</span></a>
     <a href="/formation"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
     <a href="/parametre" ><i data-feather="settings" data-feather-line="1" data-feather-size="21" data-feather-color="gray2-dark" data-feather-bg="gray2-fade-light"></i><span>Paramètre</span></a>
@@ -50,7 +50,7 @@
     </h1>
     </div>
     <div class="pt-2 mt-1 pl-4">
-    <h4 class="color-theme font-600">Adobe Premère Pro</h4>
+    <h4 class="color-theme font-600">Adobe Première Pro</h4>
     <p class="mt-n2 font-11 color-highlight mb-2">
     Adobe Première Pro est un logiciel de montage video
     </p>
