--- a/src/app/client/telechargement/telechargement.component.html
+++ b/src/app/client/telechargement/telechargement.component.html
@@ -1,35 +1,42 @@
-
-<div class="header header-fixed header-auto-show header-logo-app">
+<!-- en tête -->
+  <div class="header header-fixed header-auto-show header-logo-app">
   <a href="#0" class="header-title">AMS</a>
   <a href="#" data-menu="menu-main" class="header-icon header-icon-1"><i class="fas fa-bars"></i></a>
   <a href="#" data-toggle-theme class="header-icon header-icon-2 show-on-theme-dark"><i class="fas fa-sun"></i></a>
   <a href="#" data-toggle-theme class="header-icon header-icon-2 show-on-theme-light"><i class="fas fa-moon"></i></a>
   <a href="#" data-menu="menu-highlights" class="header-icon header-icon-3"><i class="fas fa-brush"></i></a>
   </div>
+  <!-- fin d'en tête -->
+  <!-- tab -->
   <div id="footer-bar" class="footer-bar-5">
-    <a href="/contact"><i data-feather="phone" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Blog</span></a>
-    <a href="/telechargement"  class="active-nav"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Téléchargement</span></a>
-    <a href="/"><i data-feather="home" data-feather-line="1" data-feather-size="21" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-light"></i><span>Accueil</span></a>
-    <a href="formation"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
-    <a href="/parametre"><i data-feather="settings" data-feather-line="1" data-feather-size="21" data-feather-color="gray2-dark" data-feather-bg="gray2-fade-light"></i><span>Paramètre</span></a>
-    </div>
-    <div class="card header-card shape-rounded" data-card-height="140">
-      <div class="card-overlay bg-highlight opacity-95"></div>
-      <div class="card-overlay dark-mode-tint"></div>
-      <div class="card-bg preload-img" data-src="images/pictures/20s.jpg"></div>
-      </div>
+	<a href="/contact"><i data-feather="phone" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Blog</span></a>
+	<a href="/telechargement"  class="active-nav"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Téléchargement</span></a>
+	<a href="/"><i data-feather="home" data-feather-line="1" data-feather-size="21" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-light"></i><span>Accueil</span></a>
+	<a href="formation"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
+	<a href="/parametre"><i data-feather="settings" data-feather-line="1" data-feather-size="21" data-feather-color="gray2-dark" data-feather-bg="gray2-fade-light"></i><span>Paramètre</span></a>
+	</div>
+	<!-- fin du tab -->
+	<div class="card header-card shape-rounded" data-card-height="140">
+	  <div class="card-overlay bg-highlight opacity-95"></div>
+	  <div class="card-overlay dark-mode-tint"></div>
+	  <div class="card-bg preload-img" data-src="images/pictures/20s.jpg"></div>
+	  </div>
   <div class="page-content">
   <div class="page-title page-title-large">
   <h2 data-username="Bienvenue" class="greeting-text"></h2>
   <a href="#" data-menu="menu-main" class="bg-fade-gray1-dark shadow-xl preload-img" data-src="assets/images/avatars/5s.png"></a>
   </div>
+  <!-- barre de recherche -->
 <div class="content">
   <div class="search-box bg-theme rounded-m shadow-xl bottom-0">
   <i class="fa fa-search"></i>
+  <!-- champ d'entré de texte -->
   <input type="text" class="border-0" placeholder="Rechercher les logiciels dont vous avez besoins " data-search>
-  </div>
+  <!-- fin du champ d'entre de texte -->
+</div>
   <div class="search-results disabled-search-list card card-style mx-0 mt-3 px-2">
   <div class="list-group list-custom-large">
+	<!-- afficher le résultat de recherche -->
   <a href="/telechargement/sage-comptabilite" data-filter-item data-filter-name="sage comptabilité">
   <i class="fa fa-file color-gray2-dark font-17"></i>
   <span>Sage Comptabilité</span>
@@ -37,29 +44,29 @@
   <i class="fa fa-angle-right mr-2"></i>
   </a>
   <a href="/telechargement/sage-gestion-commerciale" data-filter-item data-filter-name="sage gestion commerciale">
-    <i class="fa fa-file color-gray2-dark font-17"></i>
-    <span>Sage Gestion Commerciale</span>
-    <strong>Logiciel</strong>
-    <i class="fa fa-angle-right mr-2"></i>
-    </a>
-    <a href="#" data-filter-item data-filter-name="sage immobilisation">
-      <i class="fa fa-file color-gray2-dark font-17"></i>
-      <span>Sage Immobilisation</span>
-      <strong>Logiciel</strong>
-      <i class="fa fa-angle-right mr-2"></i>
-      </a>
-      <a href="/telechargement/sage-paie" data-filter-item data-filter-name="sage paie">
-        <i class="fa fa-file color-gray2-dark font-17"></i>
-        <span>Sage Paie</span>
-        <strong>Logiciel</strong>
-        <i class="fa fa-angle-right mr-2"></i>
-        </a>
-        <a href="/telechargement/photoshop" data-filter-item data-filter-name="adobe photoshop">
-          <i class="fa fa-file color-gray2-dark font-17"></i>
-          <span>Adobe Photoshop</span>
-          <strong>Logiciel</strong>
-          <i class="fa fa-angle-right mr-2"></i>
-          </a>
+	<i class="fa fa-file color-gray2-dark font-17"></i>
+	<span>Sage Gestion Commerciale</span>
+	<strong>Logiciel</strong>
+	<i class="fa fa-angle-right mr-2"></i>
+	</a>
+	<a href="#" data-filter-item data-filter-name="sage immobilisation">
+	  <i class="fa fa-file color-gray2-dark font-17"></i>
+	  <span>Sage Immobilisation</span>
+	  <strong>Logiciel</strong>
+	  <i class="fa fa-angle-right mr-2"></i>
+	  </a>
+	  <a href="/telechargement/sage-paie" data-filter-item data-filter-name="sage paie">
+		<i class="fa fa-file color-gray2-dark font-17"></i>
+		<span>Sage Paie</span>
+		<strong>Logiciel</strong>
+		<i class="fa fa-angle-right mr-2"></i>
+		</a>
+		<a href="/telechargement/photoshop" data-filter-item data-filter-name="adobe photoshop">
+		  <i class="fa fa-file color-gray2-dark font-17"></i>
+		  <span>Adobe Photoshop</span>
+		  <strong>Logiciel</strong>
+		  <i class="fa fa-angle-right mr-2"></i>
+		  </a>
  <a href="/telechargement/premierepro" data-filter-item data-filter-name="adobe premiere pro">
  <i class="fa fa-file color-gray2-dark font-17"></i>
   <span>Adobe Première Pro 2020</span>
@@ -69,63 +76,67 @@
   </div>
   </div>
   </div>
-
+<!-- fin de la barre de recherche -->
   <div class="row mb-0">
-      <div class="col-6 pr-0">
-      <div class="card card-style">
-      <img src="assets/images/L_SAGE_Bright_Green4.png" class="img-fluid">
-      <div class="content pb-0">
-      <p><a href="/telechargement/sage-comptabilite" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
-      </div>
-      </div>
-      </div>
-      <div class="col-6 pl-0">
-      <div class="card card-style">
-      <img src="assets/images/L_SAGE_Bright_Green3.png" class="img-fluid">
-      <div class="content pb-0">
-      <p><a href="/telechargement/sage-gestion-commerciale" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
-      </div>
-      </div>
-      </div>
+	  <div class="col-6 pr-0">
+	  <div class="card card-style">
+	  <img src="assets/images/L_SAGE_Bright_Green4.png" class="img-fluid">
+	  <div class="content pb-0">
+	  <p><a href="/telechargement/sage-comptabilite" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
+	  </div>
+	  </div>
+	  </div>
+	  <!-- produit sage gestion commerciale -->
+	  <div class="col-6 pl-0">
+	  <div class="card card-style">
+	  <img src="assets/images/L_SAGE_Bright_Green3.png" class="img-fluid">
+	  <div class="content pb-0">
+	  <p><a href="/telechargement/sage-gestion-commerciale" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
+	  </div>
+	  </div>
+	  </div>
   </div>
-
+<!-- produit sage paie -->
   <div class="row mb-0">
-      <div class="col-6 pr-0">
-      <div class="card card-style">
-      <img src="assets/images/paie.png" class="img-fluid">
-      <div class="content pb-0">
-      <p><a href="/telechargement/sage-paie" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
-      </div>
-      </div>
-      </div>
-      <div class="col-6 pl-0">
-      <div class="card card-style">
-      <img src="assets/images/immm.png" class="img-fluid">
-      <div class="content pb-0">
-      <p><a href="#" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
-      </div>
-      </div>
-      </div>
+	  <div class="col-6 pr-0">
+	  <div class="card card-style">
+	  <img src="assets/images/paie.png" class="img-fluid">
+	  <div class="content pb-0">
+	  <p><a href="/telechargement/sage-paie" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
+	  </div>
+	  </div>
+	  </div>
+	  <!-- produit sage immobilisation -->
+	  <div class="col-6 pl-0">
+	  <div class="card card-style">
+	  <img src="assets/images/immm.png" class="img-fluid">
+	  <div class="content pb-0">
+	  <p><a href="#" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
+	  </div>
+	  </div>
+	  </div>
   </div>
-
+<!-- produit adobe photoshop -->
   <div class="row mb-0">
-    <div class="col-6 pr-0">
-    <div class="card card-style">
-    <img src="assets/images/photoshop.jpg" class="img-fluid">
-    <div class="content pb-0">
-    <p><a href="/telechargement/photoshop" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
-    </div>
-    </div>
-    </div>
-    <div class="col-6 pl-0">
-    <div class="card card-style">
-    <img src="assets/images/premierepro.jpg" class="img-fluid">
-    <div class="content pb-0">
-    <p><a href="/telechargement/premierepro" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
-    </div>
-    </div>
-    </div>
+	<div class="col-6 pr-0">
+	<div class="card card-style">
+	<img src="assets/images/photoshop.jpg" class="img-fluid">
+	<div class="content pb-0">
+	<p><a href="/telechargement/photoshop" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
+	</div>
+	</div>
+	</div>
+	<!-- produit adobe premiere pro -->
+	<div class="col-6 pl-0">
+	<div class="card card-style">
+	<img src="assets/images/premierepro.jpg" class="img-fluid">
+	<div class="content pb-0">
+	<p><a href="/telechargement/premierepro" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
+	</div>
+	</div>
+	</div>
 </div>
+<!-- produit adobe acrobat -->
 <div class="row mb-0">
   <div class="col-6 pr-0">
   <div class="card card-style">
@@ -135,6 +146,7 @@
   </div>
   </div>
   </div>
+  <!-- produit adobe animate -->
   <div class="col-6 pl-0">
   <div class="card card-style">
   <img src="assets/images/animate.jpg" class="img-fluid">
@@ -144,49 +156,59 @@
   </div>
   </div>
 </div>
+<!-- barre de pagination -->
 <nav aria-label="pagination-demo">
   <ul class="pagination pagination- justify-content-center">
   <li class="page-item">
   <a class="page-link rounded-l color-white bg-gray2-dark shadow-xl border-0" href="#" tabindex="-1" aria-disabled="true"><i class="fa fa-angle-left"></i></a>
   </li>
+
+  <!-- premiere catégorie -->
   <li class="page-item"><a class="page-link rounded-l bg-red2-dark shadow-xl border-0" href="#">1</a></li>
+
   <li class="page-item">
   <a class="page-link rounded-l color-white bg-gray2-dark shadow-xl border-0" href="#"><i class="fa fa-angle-right"></i></a>
   </li>
   </ul>
   </nav>
-
+<!-- fin de la barre de pagination -->
+<!-- barre des categories -->
   <div class="divider divider-margins"></div>
   <div class="content mb-3">
-    <h5 class="float-left font-16 font-500">Categories</h5>
-    <a class="float-right font-12 color-highlight mt-n1" href="#">Voir tout</a>
-    <div class="clearfix"></div>
-    </div>
-    <a href="#" data-card-height="80" class="card card-style mb-3">
-    <div class="card-center">
-    <h5 class="pl-3">Sage</h5>
-    <p class="pl-3 mt-n2 font-12 color-highlight mb-0">Nouveau</p>
-    </div>
-    <div class="card-center opacity-30">
-    <i class="fa fa-arrow-right opacity-50 float-right color-theme pr-3"></i>
-    </div>
-    </a>
-    <a href="/telechargement/categories/adobe" data-card-height="80" class="card card-style mb-3">
-    <div class="card-center">
-    <h5 class="pl-3">Adobe</h5>
-    <p class="pl-3 mt-n2 font-12 color-highlight mb-0">Nouveau</p>
-    </div>
-    <div class="card-center opacity-30">
-    <i class="fa fa-arrow-right opacity-50 float-right color-theme pr-3"></i>
-    </div>
-    </a>
-
+	<h5 class="float-left font-16 font-500">Categories</h5>
+	<a class="float-right font-12 color-highlight mt-n1" href="#">Voir tout</a>
+	<div class="clearfix"></div>
+	</div>
+	<!-- premiere catégorie -->
+	<a href="#" data-card-height="80" class="card card-style mb-3">
+	<div class="card-center">
+	<h5 class="pl-3">Sage</h5>
+	<p class="pl-3 mt-n2 font-12 color-highlight mb-0">Nouveau</p>
+	</div>
+	<div class="card-center opacity-30">
+	<i class="fa fa-arrow-right opacity-50 float-right color-theme pr-3"></i>
+	</div>
+	</a>
+	<!-- fin de la premiere catégorie -->
+	<!-- deuxième catégorie -->
+	<a href="/telechargement/categories/adobe" data-card-height="80" class="card card-style mb-3">
+	<div class="card-center">
+	<h5 class="pl-3">Adobe</h5>
+	<p class="pl-3 mt-n2 font-12 color-highlight mb-0">Nouveau</p>
+	</div>
+	<div class="card-center opacity-30">
+	<i class="fa fa-arrow-right opacity-50 float-right color-theme pr-3"></i>
+	</div>
+	</a>
+<!-- fin de la deuxième catégorie -->
 
 
   <div class="divider divider-margins"></div>
+
+  <!-- pieds de la page importer depuis la page menu-footer.html -->
   <div class="footer" data-menu-load="assets/menu-footer.html"></div>
 </div>
-
+<!-- fin de pieds de page -->
 <div id="menu-share" class="menu menu-box-bottom menu-box-detached rounded-m" data-menu-load="assets/menu-share.html" data-menu-height="420" data-menu-effect="menu-over">
 </div>
 <div id="menu-highlights" class="menu menu-box-bottom menu-box-detached rounded-m" data-menu-load="assets/menu-colors.html" data-menu-height="510" data-menu-effect="menu-over">
