--- a/src/app/client/contact/contact.component.html
+++ b/src/app/client/contact/contact.component.html
@@ -7,7 +7,7 @@
   </div>
   <div id="footer-bar" class="footer-bar-5">
     <a href="contact" class="active-nav"><i data-feather="phone" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Contact</span></a>
-    <a href="/telechargement"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Telechargement</span></a>
+    <a href="/telechargement"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Téléchargement</span></a>
     <a href="/" ><i data-feather="home" data-feather-line="1" data-feather-size="21" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-light"></i><span>Accueil</span></a>
     <a href="/formation"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
     <a href="/parametre" ><i data-feather="settings" data-feather-line="1" data-feather-size="21" data-feather-color="gray2-dark" data-feather-bg="gray2-fade-light"></i><span>Paramètre</span></a>
@@ -17,7 +17,7 @@
 <h2><a href="/"><i class="fa fa-arrow-left"></i></a>Contact</h2>
 <a href="#" data-menu="menu-main" class="bg-fade-gray1-dark shadow-xl preload-img" data-src="assets/images/avatars/5s.png"></a>
 </div>
-<div class="card header-card shape-rounded" data-card-height="150">
+<div class="card header-card shape-rounded" data-card-height="90">
   <div class="card-overlay bg-highlight opacity-95"></div>
   <div class="card-overlay dark-mode-tint"></div>
   <div class="card-bg bg-20"></div>
