--- a/src/app/client/accueil/accueil.component.html
+++ b/src/app/client/accueil/accueil.component.html
@@ -1,4 +1,4 @@
-
+<!-- en-tête -->
 <div class="header header-fixed header-auto-show header-logo-app">
   <a href="#0" class="header-title">AMS</a>
   <a href="#" data-menu="menu-main" class="header-icon header-icon-1"><i class="fas fa-bars"></i></a>
@@ -6,6 +6,8 @@
   <a href="#" data-toggle-theme class="header-icon header-icon-2 show-on-theme-light"><i class="fas fa-moon"></i></a>
   <a href="#" data-menu="menu-highlights" class="header-icon header-icon-3"><i class="fas fa-brush"></i></a>
   </div>
+  <!-- fin d'en-tête -->
+  <!-- pieds de page -->
   <div id="footer-bar" class="footer-bar-5">
     <a href="contact"><i data-feather="phone" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Contact</span></a>
     <a href="/telechargement"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Téléchargement</span></a>
@@ -13,8 +15,10 @@
     <a href="/formation"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
     <a href="/parametre"><i data-feather="settings" data-feather-line="1" data-feather-size="21" data-feather-color="gray2-dark" data-feather-bg="gray2-fade-light"></i><span>Paramètre</span></a>
     </div>
+  <!-- fin de pieds de page -->
   <div class="page-content">
   <div class="page-title page-title-large">
+    <!-- en tête de bienvenue -->
   <h2 data-username="Bienvenue" class="greeting-text"></h2>
   <a href="#" data-menu="menu-main" class="bg-fade-gray1-dark shadow-xl preload-img" data-src="assets/images/avatars/5s.png"></a>
   </div>
@@ -23,8 +27,10 @@
   <div class="card-overlay dark-mode-tint"></div>
   <div class="card-bg preload-img" data-src="assets/images/pictures/20s.jpg"></div>
   </div>
-
+<!-- fin d'en-tête de bienvenue -->
+<!-- debut de carousel -->
   <div class="single-slider-boxed text-center owl-no-dots owl-carousel">
+    <!-- carousel de blog -->
   <div class="card rounded-l shadow-l" data-card-height="320">
   <div class="card-bottom">
   <h1 class="font-24 font-700">Blog</h1>
@@ -35,6 +41,7 @@
   <div class="card-overlay bg-gradient-fade"></div>
   <div class="card-bg owl-lazy" data-src="assets/images/pictures/17m.jpg"></div>
   </div>
+  <!-- carousel de formation video -->
   <div class="card rounded-l shadow-l" data-card-height="320">
   <div class="card-bottom">
   <h1 class="font-24 font-700">Formation video</h1>
@@ -45,6 +52,7 @@
   <div class="card-overlay bg-gradient-fade"></div>
   <div class="card-bg owl-lazy" data-src="assets/images/pictures/8m.jpg"></div>
   </div>
+  <!-- carousel de téléchargement -->
   <div class="card rounded-l shadow-l" data-card-height="320">
   <div class="card-bottom">
   <h1 class="font-24 font-700">Téléchargement</h1>
@@ -56,6 +64,8 @@
   <div class="card-bg owl-lazy" data-src="assets/images/pictures/14m.jpg"></div>
   </div>
   </div>
+  <!-- fin de carousel -->
+  <!-- lien vers les sections de page -->
   <div class="content mt-0">
   <div class="row">
     <div class="col-6">
@@ -75,7 +85,8 @@
 
   </div>
   </div>
-
+<!-- fin des liens vers sections de page -->
+<!-- theme de couleur -->
   <div id="manual-mode-detected" class="card card-style">
     <div class="content mb-4">
 
@@ -93,6 +104,8 @@
     </div>
     </div>
     </div>
+    <!-- fin du theme de couleur -->
+    <!-- steps -->
   <div class="card card-style">
     <div class="content text-center">
     <h2>Connaitre ces trois étapes</h2>
@@ -138,19 +151,23 @@
     </div>
     </div>
     </div>
+    <!-- fin des steps -->
+    <!-- section de presentation -->
   <div class="card card-style preload-img" data-src="assets/images/pictures/20s.jpg" data-card-height="350">
     <div class="card-center text-center">
       <p class="line-height-xl font-19 font-300 color-white pl-3 pr-3 mb-2">
       Site crée par AMS avec la collaboration AAGR .
       </p>
+      <p class="opacity-50 color-white">Assohou Ahoua Guy Rodrigue</p>
       <p class="opacity-50 color-white">Assohou Miesan Stephane</p>
+      <img src="assets/images/intro.jpg" class="img-fluid rounded-circle" alt="img">
       </div>
       <div class="card-overlay bg-highlight opacity-95"></div>
       </div>
 
 
 
-
+<!-- footer de la page -->
   <div class="footer" data-menu-load="assets/menu-footer.html"></div>
 </div>
 
